test: validate database and Redis performance